<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:padding="5dp"
        android:text="@string/default_value"
        android:textColor="@color/temperature"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:gravity="start|center_vertical"
        android:padding="5dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/tvTemperature"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />

    <TextView
        android:id="@+id/tvLastSyncTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:gravity="start|center_vertical"
        android:padding="5dp"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_access_time"
        app:layout_constraintStart_toStartOf="@+id/tvTemperature"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <EditText
        android:id="@+id/etCityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/city_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastSyncTime" />

    <EditText
        android:id="@+id/etCountryCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/country_code"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etCityName"
        app:layout_constraintStart_toStartOf="@+id/etCityName"
        app:layout_constraintTop_toBottomOf="@+id/etCityName" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/search"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCountryCode" />

    <ImageView
        android:id="@+id/ivRefresh"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="0dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/etCountryCode"
        app:layout_constraintTop_toTopOf="@+id/btnSearch" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvForecast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherData" />

    <TextView
        android:id="@+id/tvWeatherData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_5_to_6_days_weather_predictions"
        android:textColor="@color/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>